--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    index page content goes here
-    <p>Welcome to the index page!</p>
-</body>
-</html>
+<p>Index page was modified by og</p>
+<b>Registration page</b>
+<b>Login page</b>
